# Astra-cyber

astra v2/: Cargo.toml
astra v2/scripts/: astra.service  astrainstall.sh  install-astra.sh
astra v2/src/: main.rs
astra v2/src/core/: config.rs  firewall.rs  logger.rs  mod.rs
astra v2/src/modules/: mod.rs  tcp_guard.rs
