[package]
name = "astra"
version = "1.0.0"
edition = "2021"
authors = ["ASTRA Security Team"]
description = "Advanced Stealth Threat Response Architecture - Military-Grade Network Defense Engine"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
pcap = "1.0"
libc = "0.2"
netstat2 = "0.9"
pnet = "0.31"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
nix = "0.26"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true